# attendance-backend

./: .env  pyproject.toml  requirements.txt
academics/: models.py
academics/api/: serializers.py  viewsets.py
academics/migrations/: 0001_initial.py
accounts/: models.py  views.py
accounts/api/: api_view.py  serializers.py  viewsets.py
accounts/migrations/: 0001_initial.py  0002_remove_profile_user_adminprofile_user_and_more.py
attendance/: admin.py  ml_client.py  models.py
attendance/api/: serializers.py  viewsets.py
attendance/migrations/: 0001_initial.py
core/: ProcFile  routers.py  settings.py  urls.py
core/utils/: custom_perms.py  custom_tokens.py  response_formatting_middleware.py
